<resources>
    <string name="app_name">NZSE Praktikum</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="descBtnSwitchOn">TV aktivieren</string>
    <string name="descBtnSettings">Settings Button</string>
    <string name="descCurrentChannel">Aktueller Kanal</string>
    <string name="descChannelPrev">Vorheriger Kanal</string>
    <string name="descChannelNext">Nächster Kanal</string>
    <string name="descBtnPower">Power Button</string>
    <string name="descBtnFavs">Favorites Button</string>
    <string name="descImgTV">TV Image</string>
    <string name="descBtnVolumeDown">Volume Down Button</string>
    <string name="descBtnVolumeUp">Volume Up Button</string>
    <string name="descBtnMute">Mute Button</string>
    <string name="descBtnPiP">Picture-In-Picture Button</string>
    <string name="descBtnPause">Pause Button</string>

    <string name="lblBtnChannels">Programme</string>
    <string name="lblScanChannels">Scan</string>
    <string name="lblCurrentChannel">Aktueller Sender</string>
    <string name="lblSettingsIP">TV IP-Adresse</string>
    <string name="lblSettingsRatio">Seitenverhältnis</string>
    <string name="lblSettingsBackgroundImg">Senderbild anzeigen</string>
    <string name="lblSettingsBackgroundImgSubtitle">Für aktuellen Kanal</string>
    <string name="lblMisc">Beispieleinstellung</string>
    <string name="lblBtnSearch">Suche</string>
    <string name="lblVolumes">V</string>
    <string name="lblChannels">P</string>
    <string name="lblBtnSettings">Einstellungen</string>
    <string name="lblBtnSaveSettings">Speichern</string>
    <string name="lblBtnTestConnection">Test</string>
    <string name="lblNoChannels">Keine Kanäle vorhanden</string>
    <string name="lblNoFavorites">Keine Favoriten gewählt</string>
    <string name="lblBtnToggleFavs">Favoriten filtern</string>
    <string name="lblPipSwap">Tauschen</string>
    <string name="lblPipDisable">Deaktivieren</string>
    <string name="lblBtnPipSwap">Picture-In-Picture und Hauptkanal tauschen</string>
    <string name="lblSettingsMainchannel">Hauptkanal</string>
    <string name="lblSettingsPip">Bild-in-Bild</string>
    <string name="lbl_4_3">4:3</string>
    <string name="lbl_16_9">16:9</string>
    <string name="lblNoIpSetHint">Keine IP-Adresse eingestellt!</string>
    <string name="lblNoIpSetAction">Einstellen</string>
    <string name="lblConnectFailure">Verbindung zu TV fehlgeschlagen!</string>
    <string name="lblConnectSuccess">Verbindung zu TV hergestellt!</string>
    <string name="lblConnectionLost">Verbindung zu TV verloren!</string>
    <string name="lblScanFailure">Fehler beim Kanal-Scan!</string>
    <string name="lblScanSuccess">Kanäle gescannt!</string>
    <string name="lblWaiting">Bitte warten....</string>
    <string name="lblAlertScanRequired">Für die volle Funktionalität wird ein Kanalscan benötigt.\nJetzt durchführen?</string>
    <string name="lblAlertScanWarning">Der Kanalscan wird alle Favoriten zurücksetzen</string>

    <string name="lblAlertConfirm">Ja</string>
    <string name="lblAlertDeny">Nein</string>

    <string name="titleMainOff">Fernbedienung</string>
    <string name="titleMainOn">Fernseher bedienen</string>
    <string name="titleChooseChannel">Kanal wählen</string>

    <string name="titleAlertScanRequired">Kanalscan benötigt</string>
    <string name="titleAlertScanWarning">Fortfahren?</string>

    <string name="lblPlayingPlaceholder">Kein Kanal gewählt</string>

    <string name="preferences_file_name">settings</string>
    <string name="preferences_ip_key">ip</string>
    <string name="preferences_ip_default">0.0.0.0</string>
    <string name="preferences_ratio_index_main_key">ratio_main</string>
    <string name="preferences_ratio_index_pip_key">ratio_pip</string>
    <string name="preferences_background_img_key">background_img</string>

    <string name="commons_file_name">commons</string>
    <string name="commons_standbystate_key">standby</string>
    <string name="commons_channelindex_key">channelId</string>
    <string name="commons_pipstatus_key">pipstatus</string>
    <string name="commons_pipchannel_key">pipchannel</string>
    <string name="commons_volume_key">volume</string>
    <string name="commons_volume_muted_key">muted</string>
    <string name="commons_first_launch_key">first_launch</string>

    <string name="intentExtra_channelAdapterPosition_key">channelInstancePos</string>
    <string name="intentExtra_showBackgroundImg_key">background_img</string>
    <string name="intentExtra_doChannelscanOnEnter_key">do_channelscan</string>
</resources>
