<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_SwitchedOn">

    <ImageButton
        android:id="@+id/btnSwitchOff"
        style="@android:style/Widget.Material.Light.ImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:backgroundTint="@color/colorAccent"
        android:backgroundTintMode="src_over"
        android:contentDescription="@string/descBtnPower"
        android:elevation="@dimen/control_elevation_material"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/btnChannels"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_power_settings_new_white_36dp" />

    <Button
        android:id="@+id/btnChannels"
        style="@android:style/Widget.Material.Light.Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="@dimen/control_elevation_material"
        android:text="@string/lblBtnChannels"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imgTV"
        app:layout_constraintEnd_toStartOf="@+id/btnFavs"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnFavs"
        style="@android:style/Widget.Material.Light.ImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/descBtnFavs"
        android:elevation="@dimen/control_elevation_material"
        android:padding="@dimen/control_icon_padding"
        android:scaleType="fitCenter"
        android:tint="@color/colorYellow"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.15"
        app:srcCompat="@drawable/ic_star_black_36dp" />

    <ImageView
        android:id="@+id/imgTV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/descImgTV"
        android:scaleType="center"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/btnMute"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_tv_black_36dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/sliderVolume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toEndOf="@+id/imgTV">

        <ImageButton
            android:id="@+id/btnVolumeDown"
            style="@android:style/Widget.Material.Light.ImageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/descBtnVolumeDown"
            android:elevation="@dimen/control_elevation_material"
            android:padding="@dimen/control_icon_padding"
            android:scaleType="fitCenter"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_navigate_before_black_36dp" />

        <ImageButton
            android:id="@+id/btnVolumeUp"
            style="@android:style/Widget.Material.Light.ImageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/descBtnVolumeUp"
            android:elevation="@dimen/control_elevation_material"
            android:padding="@dimen/control_icon_padding"
            android:scaleType="fitCenter"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_navigate_next_black_36dp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btnMute"
        style="@android:style/Widget.Material.Light.ImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="#00FFFFFF"
        android:contentDescription="@string/descBtnMute"
        android:tint="?attr/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/btnPiP"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_volume_up_black_36dp" />

    <SeekBar
        android:id="@+id/sliderVolume"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:progress="25"
        app:layout_constraintBottom_toTopOf="@+id/btnPiP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toEndOf="@+id/btnMute" />

    <ImageButton
        android:id="@+id/btnPiP"
        style="@android:style/Widget.Material.Light.ImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/descBtnPiP"
        android:elevation="@dimen/control_elevation_material"
        android:padding="@dimen/control_icon_padding"
        android:scaleType="fitCenter"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/layoutPlayingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_filter_none_black_36dp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="@dimen/control_border_thickness"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/layoutPlayingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPlayingBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/divider"
            android:layout_width="@dimen/control_border_thickness"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/layoutPlayingTile"
            app:layout_constraintTop_toTopOf="@+id/layoutPlayingTile" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutPlayingTile"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/frameLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:alpha="0.1"
                android:padding="@dimen/control_icon_padding"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_prosieben_logo" />

            <TextView
                android:id="@+id/lblCurrentChannel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/lblCurrentChannel"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnPlayingFavorite"
                style="@android:style/Widget.Material.Light.ImageButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="@string/descBtnFavs"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_star_border_black_36dp" />

            <TextView
                android:id="@+id/lblPlaying"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/lblPlaying"
                android:textSize="42sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnPause"
                style="@android:style/Widget.Material.Light.ImageButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/descBtnPause"
                android:padding="@dimen/control_icon_padding"
                android:scaleType="fitCenter"
                android:tint="@color/colorPrimaryDark"
                app:srcCompat="@drawable/ic_pause_black_36dp" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>